<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.pandacube.lib</groupId>
    
    <artifactId>pandalib-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <description>Open Source Software for the Minecraft server Pandacube.fr</description>
    
    <organization>
        <name>Pandacube</name>
        <url>https://www.pandacube.fr/</url>
    </organization>
    
    <developers>
        <developer>
            <id>marcbal</id>
            <name>Marc Baloup</name>
            <url>https://github.com/marcbal/</url>
        </developer>
    </developers>
    
    <inceptionYear>2011</inceptionYear>
    
    <ciManagement>
        <system>jenkins</system>
        <url>https://ci.pandacube.fr/</url>
    </ciManagement>
    
    <scm>
    	<url>https://git.pandacube.fr/PandacubeFr/</url>
    </scm>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/PandacubeFr/Pandalib/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://api.github.com/licenses/mit</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <build.number>unknown</build.number>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <bungeecord.version>26.1-R0.1-SNAPSHOT</bungeecord.version>
        <paper.version>26.1.2.build.70-stable</paper.version>
        <mc.version>1.21.11</mc.version>

        <guava.version>33.3.1-jre</guava.version> <!-- Match the version imported by Paper API/BungeeCord API if possible -->
        <gson.version>2.11.0</gson.version> <!-- Match the version imported by Paper API/BungeeCord API if possible -->
        <brigadier.version>1.3.10</brigadier.version> <!-- Match the version imported by Paper API if possible -->
        <datafixerupper.version>9.0.19</datafixerupper.version> <!-- Match the version used internally in Paper Server (Find in META-INF/libraries.list file) -->
    </properties>
	
    <modules>
        <module>pandalib-bungee</module>
        <module>pandalib-bungee-chat</module>
        <module>pandalib-bungee-permissions</module>
        <module>pandalib-chat</module>
        <module>pandalib-cli</module>
        <module>pandalib-commands</module>
        <module>pandalib-config</module>
        <module>pandalib-core</module>
        <module>pandalib-db</module>
        <module>pandalib-netapi</module>
        <module>pandalib-paper</module>
        <module>pandalib-paper-permissions</module>
        <module>pandalib-permissions</module>
        <module>pandalib-players</module>
        <module>pandalib-players-permissible</module>
        <module>pandalib-reflect</module>
        <module>pandalib-util</module>
        <module>pandalib-ws</module>
        <module>pandalib-ws-client</module>
        <module>pandalib-ws-server</module>
    </modules>

    <dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <tags>
                        <tag>
                            <name>implSpec</name>
                            <placement>a</placement>
                            <head>Implementation Requirements:</head>
                        </tag>
                        <tag>
                            <name>implNote</name>
                            <placement>a</placement>
                            <head>Implementation Note:</head>
                        </tag>
                    </tags>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
